// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row Standard 1`] = `
<div
  className="sc-bdfBwQ fWUSiw"
/>
`;

exports[`Row Standard 2`] = `
<div
  className="sc-bdfBwQ fWUSiw"
/>
`;

exports[`Row Standard selected 1`] = `
<div
  className="sc-bdfBwQ fWUSiw"
  selected={true}
/>
`;

exports[`Row Standard selected 2`] = `
<div
  className="sc-bdfBwQ fWUSiw"
  selected={true}
/>
`;
